--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -34,8 +34,9 @@
       </form>
       <br>
       <a href="{% url 'information' %}"> About us </a>
-
+      Almaz
+      
     </div>
-    
+
   </body>
 </html>
