--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -12,7 +12,7 @@
       <h2 class="alert alert-success"> {{password}} </h2>
       <br>
       <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
-
+      Almaz
     </div>
   </body>
 </html>
